% Links to vignettes 20220723
\newcommand{\viglink}{\ifelse{html}{\out{<a href="../CHNOSZ/doc/#1.html"><strong>#1.Rmd</strong></a>}}{\bold{#1.Rmd}}}
% Heat capacity and standard Gibbs energy 20231115
\newcommand{\Cp}{\ifelse{latex}{\eqn{C_P}}{\ifelse{html}{\out{<I>C<sub>P</sub></I>}}{Cp}}}
\newcommand{\DG0}{\ifelse{latex}{\eqn{{\Delta}G^{\circ}}}{\ifelse{html}{\out{&Delta;<I>G</I>&deg;}}{ΔG°}}}

\section{Changes in CHNOSZ version 2.2.0-14 (2026-01-05)}{

    \itemize{

      \item \code{label.plot()} and \code{label.figure()} now handle
      logarithmic scales for x and y axes.

      \item Fix bug preventing \code{mosaic()} from being used to form \H2O.
      
      \item For IAPWS95 water model, add 0.1 bar (0.01 MPa) to values of Psat >
      1 bar computed from \code{WP02.auxiliary()} to prevent Born functions,
      which are calculated as finite difference derivatives, from exploding.

      \item Add stibnite (Sb\s{2}S\s{3}) from
      \href{https://doi.org/10.3133/b2131}{Robie and Hemingway (1995)}.

      \item Add \code{phosphorylate()} to calculate affinity of phosphorylation
      reactions with pH-dependent speciation, including Mg-complexed species.

      \item Add \code{hyphen.in.pdf()} for replacing minus signs with
      hyphens in text added to PDF plots.

      \item Use \href{https://online.ucpress.edu/elementa}{Elementa} reference
      style (like \href{https://www.csemanual.org}{CSE} name-year style but all
      authors are listed) in Rd files.

      \item Add colors to \code{demo/NaCl.R}.

      \item Add aqueous SO\s{2} and S\s{3}\S{-} to basis species for mosaic
      calculations in examples, demos, and vignettes. Thanks to Evgeniy
      Bastrakov for suggesting this change.

    }

}


\section{Changes in CHNOSZ version 2.2.0 (2025-06-20)}{

  \subsection{OBIGT DATABASE FORMAT}{
    \itemize{

      \item Mineral species whose \code{T} value is a Cp equation limit or
      phase transition temperature are indicated by \samp{CGL} or